--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
             </a>
             <!-- <img itemprop="logo" title="Pornhub" alt="Pornhub Porn Videos" width="150" height="40" src="https://ei.phncdn.com/www-static/images/pornhub_logo_straight.svg?cache=2025050902"> -->
             <div class="ph-logo">
-                <span class="ph-logo-porn">Bili</span><span class="ph-logo-hub">Bili</span>
+                <span class="ph-logo-porn">Bili</span><span class="ph-logo-hub">Hub</span>
             </div>
         </div>
 
