--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
             </a>
             <!-- <img itemprop="logo" title="Pornhub" alt="Pornhub Porn Videos" width="150" height="40" src="https://ei.phncdn.com/www-static/images/pornhub_logo_straight.svg?cache=2025050902"> -->
             <div class="ph-logo">
-                <span class="ph-logo-porn">Bili</span><span class="ph-logo-hub">Hub</span>
+                <span class="ph-logo-porn">Bili</span><span class="ph-logo-hub">Bili</span>
             </div>
         </div>
 
@@ -46,21 +46,8 @@
     <main>
         <div class="video-grid-container">
             <article class="video-card">
-                <a href="https://www.bilibili.com/video/BV1NZmGYzEVx/?spm_id_from=333.1007.top_right_bar_window_custom_collection.content.click" class="thumbnail-link" target="_blank">
-                    <img src="../static/images/eb0c597deca8151cfbe4f1807755141e42a10a92.jpg" alt="视频封面 1">
-                    <span class="duration">15:42</span>
-                </a>
-                <div class="video-info">
-                    <h3 class="video-title"><a href="https://www.bilibili.com/video/BV1NZmGYzEVx/?spm_id_from=333.1007.top_right_bar_window_custom_collection.content.click" target="_blank">这几把是啥</a></h3>
-                    <div class="video-meta">
-                        <span class="views">2.5M 次观看</span>
-                        <span class="upload-time">3 小时前</span>
-                    </div>
-                </div>
-            </article>
-            <article class="video-card">
                 <a href="#" class="thumbnail-link">
-                    <img src="../static/images/cyberpunk2077.png" alt="视频封面 2">
+                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
                     <span class="duration">07:23</span>
                 </a>
                 <div class="video-info">
@@ -72,135 +59,145 @@
                 </div>
             </article>
             <article class="video-card">
-                <a href="https://www.bilibili.com/video/BV1GJ411x7h7/?spm_id_from=333.337.search-card.all.click" class="thumbnail-link" target="_blank">
-                    <img src="../static/images/5242750857121e05146d5d5b13a47a2a6dd36e98.jpg" alt="视频封面 3">
-                    <span class="duration">03:33</span>
+                <a href="#" class="thumbnail-link">
+                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
+                    <span class="duration">07:23</span>
                 </a>
                 <div class="video-info">
-                    <h3 class="video-title"><a href="https://www.bilibili.com/video/BV1GJ411x7h7/?spm_id_from=333.337.search-card.all.click" target="_blank">自觉点进来受骗</a></h3>
+                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
                     <div class="video-meta">
-                        <span class="views">114.5M 次观看</span>
-                        <span class="upload-time">2 周前</span>
+                        <span class="views">456K 次观看</span>
+                        <span class="upload-time">5 天前</span>
                     </div>
                 </div>
             </article>
             <article class="video-card">
                 <a href="#" class="thumbnail-link">
-                    <img src="../static/images/ca63e5ddae6dc09ea18137afee7e5c3461627cb8.jpg" alt="视频封面 4">
-                    <span class="duration">04:55</span>
+                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
+                    <span class="duration">07:23</span>
                 </a>
                 <div class="video-info">
-                    <h3 class="video-title"><a href="#">这是什么游戏?</a></h3>
+                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
                     <div class="video-meta">
-                        <span class="views">926K 次观看</span>
-                        <span class="upload-time">1 月前</span>
-                    </div>
-                </div>
-            </article>
-            <article class="video-card">
-                <a href="https://www.bilibili.com/video/BV1aT1sY5EQL/?spm_id_from=333.1387.favlist.content.click"
-                    class="thumbnail-link" target="_blank">
-                    <img src="../static/images/1c3c1300bdfd3a584304576cda95e7a79521e231.jpg" alt="视频封面 5">
-                    <span class="duration">20:15</span>
-                </a>
-                <div class="video-info">
-                    <h3 class="video-title"><a
-                            href="https://www.bilibili.com/video/BV1aT1sY5EQL/?spm_id_from=333.1387.favlist.content.click"
-                            target="_blank">“Cheems, 你要逃出时间循环吗?” (3)</a></h3>
-                    <div class="video-meta">
-                        <span class="views">3.2M 次观看</span>
-                        <span class="upload-time">6 天前</span>
+                        <span class="views">456K 次观看</span>
+                        <span class="upload-time">5 天前</span>
                     </div>
                 </div>
             </article>
             <article class="video-card">
                 <a href="#" class="thumbnail-link">
-                    <img src="../static/images/e7102853c16f98af31977671a3b9a9dcc4710e9b.jpg" alt="视频封面 6">
-                    <span class="duration">09:47</span>
+                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
+                    <span class="duration">07:23</span>
                 </a>
                 <div class="video-info">
-                    <h3 class="video-title"><a href="#">精品板绘教程</a></h3>
+                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
                     <div class="video-meta">
-                        <span class="views">754K 次观看</span>
-                        <span class="upload-time">4 天前</span>
+                        <span class="views">456K 次观看</span>
+                        <span class="upload-time">5 天前</span>
                     </div>
                 </div>
             </article>
             <article class="video-card">
                 <a href="#" class="thumbnail-link">
-                    <img src="../static/images/62fe14308e753ef9e73e71d4072baa24ff13cf48.jpg" alt="视频封面 7">
-                    <span class="duration">03:12</span>
+                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
+                    <span class="duration">07:23</span>
                 </a>
                 <div class="video-info">
-                    <h3 class="video-title"><a href="#">"你是什么龙王"</a></h3>
+                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
                     <div class="video-meta">
-                        <span class="views">114K 次观看</span>
-                        <span class="upload-time">8 天前</span>
+                        <span class="views">456K 次观看</span>
+                        <span class="upload-time">5 天前</span>
                     </div>
                 </div>
             </article>
             <article class="video-card">
-                <a href="https://www.bilibili.com/video/BV1gf5Xz9EL6/?spm_id_from=333.1387.upload.video_card.click" class="thumbnail-link" target="_blank">
-                    <img src="../static/images/f38caf44fdc6f60c28795655acee1a0c930d912e.jpg" alt="视频封面 8">
-                    <span class="duration">10:29</span>
+                <a href="#" class="thumbnail-link">
+                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
+                    <span class="duration">07:23</span>
                 </a>
                 <div class="video-info">
-                    <h3 class="video-title"><a href="https://www.bilibili.com/video/BV1gf5Xz9EL6/?spm_id_from=333.1387.upload.video_card.click" target="_blank">哈哈哈哈哈哈哈</a></h3>
+                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
                     <div class="video-meta">
-                        <span class="views">514K 次观看</span>
-                        <span class="upload-time">1 天前</span>
+                        <span class="views">456K 次观看</span>
+                        <span class="upload-time">5 天前</span>
                     </div>
                 </div>
             </article>
             <article class="video-card">
-                <a href="#" class="thumbnail-link" target="_blank">
-                    <img src="" alt="视频封面 9">
-                    <span class="duration">11:45</span>
+                <a href="#" class="thumbnail-link">
+                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
+                    <span class="duration">07:23</span>
                 </a>
                 <div class="video-info">
-                    <h3 class="video-title"><a href="#" target="_blank">视频标题9</a></h3>
+                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
                     <div class="video-meta">
-                        <span class="views">3.1K 次观看</span>
-                        <span class="upload-time">14 天前</span>
+                        <span class="views">456K 次观看</span>
+                        <span class="upload-time">5 天前</span>
                     </div>
                 </div>
             </article>
             <article class="video-card">
-                <a href="#" class="thumbnail-link" target="_blank">
-                    <img src="" alt="视频封面 10">
-                    <span class="duration">14:19</span>
+                <a href="#" class="thumbnail-link">
+                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
+                    <span class="duration">07:23</span>
                 </a>
                 <div class="video-info">
-                    <h3 class="video-title"><a href="#" target="_blank">视频标题10</a></h3>
+                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
                     <div class="video-meta">
-                        <span class="views">5.1K 次观看</span>
-                        <span class="upload-time">9 天前</span>
+                        <span class="views">456K 次观看</span>
+                        <span class="upload-time">5 天前</span>
                     </div>
                 </div>
             </article>
             <article class="video-card">
-                <a href="#" class="thumbnail-link" target="_blank">
-                    <img src="" alt="视频封面 11">
-                    <span class="duration">19:08</span>
+                <a href="#" class="thumbnail-link">
+                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
+                    <span class="duration">07:23</span>
                 </a>
                 <div class="video-info">
-                    <h3 class="video-title"><a href="#" target="_blank">视频标题11</a></h3>
+                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
                     <div class="video-meta">
-                        <span class="views">14K 次观看</span>
-                        <span class="upload-time">2 月前</span>
+                        <span class="views">456K 次观看</span>
+                        <span class="upload-time">5 天前</span>
                     </div>
                 </div>
             </article>
             <article class="video-card">
-                <a href="#" class="thumbnail-link" target="_blank">
-                    <img src="" alt="视频封面 12">
-                    <span class="duration">10:00</span>
+                <a href="#" class="thumbnail-link">
+                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
+                    <span class="duration">07:23</span>
                 </a>
                 <div class="video-info">
-                    <h3 class="video-title"><a href="#" target="_blank">视频标题12</a></h3>
+                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
                     <div class="video-meta">
-                        <span class="views">14.1M 次观看</span>
-                        <span class="upload-time">1 年前</span>
+                        <span class="views">456K 次观看</span>
+                        <span class="upload-time">5 天前</span>
+                    </div>
+                </div>
+            </article>
+            <article class="video-card">
+                <a href="#" class="thumbnail-link">
+                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
+                    <span class="duration">07:23</span>
+                </a>
+                <div class="video-info">
+                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
+                    <div class="video-meta">
+                        <span class="views">456K 次观看</span>
+                        <span class="upload-time">5 天前</span>
+                    </div>
+                </div>
+            </article>
+            <article class="video-card">
+                <a href="#" class="thumbnail-link">
+                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
+                    <span class="duration">07:23</span>
+                </a>
+                <div class="video-info">
+                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
+                    <div class="video-meta">
+                        <span class="views">456K 次观看</span>
+                        <span class="upload-time">5 天前</span>
                     </div>
                 </div>
             </article>
@@ -263,7 +260,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 "Bilibili Hub"  版权所有</p>
+            <p>&copy; 2025 "Bili Hub"  版权所有</p>
         </div>
     </footer>
 
