修改了导航栏，新增了以脚本支持动态加载视频数据的功能

--- a/src/index.html
+++ b/src/index.html
@@ -25,188 +25,54 @@
                 <span class="ph-logo-porn">Bili</span><span class="ph-logo-hub">Bili</span>
             </div>
         </div>
-
+        <nav class="nav-ul-left">
+            <ul>
+                <li class="dropdown">
+                    <a href="/src/index.html">首页</a>
+                    <div class="dropdown-content">
+                        <a href="#">热门</a>
+                        <a href="#">推荐</a>
+                        <a href="#">追番</a>
+                        <a href="#">影视</a>
+                    </div>
+                </li>
+                <li class="dropdown"><a href="">番剧</a></li>
+                <li class="dropdown"><a href="">直播</a></li>
+                <li class="dropdown"><a href="">游戏中心</a></li>
+                <li class="dropdown"><a href="">会员购</a></li>
+                <li class="dropdown"><a href="">漫画</a></li>
+                <li class="dropdown"><a href="">赛事</a></li>
+            </ul>
+        </nav>
         <form class="search-bar" action="#" method="get">
             <input type="text" name="query" placeholder="搜索视频...">
             <button type="submit">搜索</button>
         </form>
-        <br>
-        <nav>
+        <nav class="nav-ul-right">
             <ul>
-                <li><a href="./index.html">视频</a></li>
-                <li><a href="#">分类</a></li>
-                <li><a href="#">社区</a></li>
-                <li><a href="#">图片</a></li>
-                <li><a href="#">发现更多 &blacktriangledown;</a></li>
+                <li class="dropdown"><a href="">大会员</a></li>
+                <li class="dropdown"><a href="">消息</a></li>
+                <li class="dropdown"><a href="">动态</a></li>
+                <li class="dropdown"><a href="">收藏</a></li>
+                <li class="dropdown"><a href="">历史</a></li>
+                <li class="dropdown"><a href="">创作中心</a></li>
+                <li class="dropdown"><a href="">投稿</a></li>
             </ul>
         </nav>
+        <div class="avatar-info">
+            <img class="avatar" src="/static/images/avatar.png" alt="用户头像">
+        </div>
 
     </header>
 
     <main>
         <div class="video-grid-container">
-            <article class="video-card">
-                <a href="#" class="thumbnail-link">
-                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
-                    <span class="duration">07:23</span>
-                </a>
-                <div class="video-info">
-                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
-                    <div class="video-meta">
-                        <span class="views">456K 次观看</span>
-                        <span class="upload-time">5 天前</span>
-                    </div>
-                </div>
-            </article>
-            <article class="video-card">
-                <a href="#" class="thumbnail-link">
-                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
-                    <span class="duration">07:23</span>
-                </a>
-                <div class="video-info">
-                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
-                    <div class="video-meta">
-                        <span class="views">456K 次观看</span>
-                        <span class="upload-time">5 天前</span>
-                    </div>
-                </div>
-            </article>
-            <article class="video-card">
-                <a href="#" class="thumbnail-link">
-                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
-                    <span class="duration">07:23</span>
-                </a>
-                <div class="video-info">
-                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
-                    <div class="video-meta">
-                        <span class="views">456K 次观看</span>
-                        <span class="upload-time">5 天前</span>
-                    </div>
-                </div>
-            </article>
-            <article class="video-card">
-                <a href="#" class="thumbnail-link">
-                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
-                    <span class="duration">07:23</span>
-                </a>
-                <div class="video-info">
-                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
-                    <div class="video-meta">
-                        <span class="views">456K 次观看</span>
-                        <span class="upload-time">5 天前</span>
-                    </div>
-                </div>
-            </article>
-            <article class="video-card">
-                <a href="#" class="thumbnail-link">
-                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
-                    <span class="duration">07:23</span>
-                </a>
-                <div class="video-info">
-                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
-                    <div class="video-meta">
-                        <span class="views">456K 次观看</span>
-                        <span class="upload-time">5 天前</span>
-                    </div>
-                </div>
-            </article>
-            <article class="video-card">
-                <a href="#" class="thumbnail-link">
-                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
-                    <span class="duration">07:23</span>
-                </a>
-                <div class="video-info">
-                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
-                    <div class="video-meta">
-                        <span class="views">456K 次观看</span>
-                        <span class="upload-time">5 天前</span>
-                    </div>
-                </div>
-            </article>
-            <article class="video-card">
-                <a href="#" class="thumbnail-link">
-                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
-                    <span class="duration">07:23</span>
-                </a>
-                <div class="video-info">
-                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
-                    <div class="video-meta">
-                        <span class="views">456K 次观看</span>
-                        <span class="upload-time">5 天前</span>
-                    </div>
-                </div>
-            </article>
-            <article class="video-card">
-                <a href="#" class="thumbnail-link">
-                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
-                    <span class="duration">07:23</span>
-                </a>
-                <div class="video-info">
-                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
-                    <div class="video-meta">
-                        <span class="views">456K 次观看</span>
-                        <span class="upload-time">5 天前</span>
-                    </div>
-                </div>
-            </article>
-            <article class="video-card">
-                <a href="#" class="thumbnail-link">
-                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
-                    <span class="duration">07:23</span>
-                </a>
-                <div class="video-info">
-                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
-                    <div class="video-meta">
-                        <span class="views">456K 次观看</span>
-                        <span class="upload-time">5 天前</span>
-                    </div>
-                </div>
-            </article>
-            <article class="video-card">
-                <a href="#" class="thumbnail-link">
-                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
-                    <span class="duration">07:23</span>
-                </a>
-                <div class="video-info">
-                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
-                    <div class="video-meta">
-                        <span class="views">456K 次观看</span>
-                        <span class="upload-time">5 天前</span>
-                    </div>
-                </div>
-            </article>
-            <article class="video-card">
-                <a href="#" class="thumbnail-link">
-                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
-                    <span class="duration">07:23</span>
-                </a>
-                <div class="video-info">
-                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
-                    <div class="video-meta">
-                        <span class="views">456K 次观看</span>
-                        <span class="upload-time">5 天前</span>
-                    </div>
-                </div>
-            </article>
-            <article class="video-card">
-                <a href="#" class="thumbnail-link">
-                    <img src="../static/images/cyberpunk2077.png" alt="视频封面">
-                    <span class="duration">07:23</span>
-                </a>
-                <div class="video-info">
-                    <h3 class="video-title"><a href="#">"早上好，夜之城"</a></h3>
-                    <div class="video-meta">
-                        <span class="views">456K 次观看</span>
-                        <span class="upload-time">5 天前</span>
-                    </div>
-                </div>
-            </article>
         </div>
         <div class="footer-head">
             <p>
                 本页面仅供学习使用，所有视频均来自网络，版权归原作者所有。
                 <br>
-                "Bilibili Hub" 
+                "Bilibili Hub"
             </p>
         </div>
     </main>
@@ -260,11 +126,23 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 "Bili Hub"  版权所有</p>
+            <p>&copy; 2025 "Bili Hub" 版权所有</p>
         </div>
     </footer>
-
+    <script src="./script.js"></script>
 
 </body>
 
 </html>
+
+<!-- 
+施工规划：
+    当指针悬停于视频封面时，预览视频的功能
+    鼠标指针悬停于用户头像时，悬浮菜单显示用户信息
+    实装搜索栏的功能，转到url=https://search.bilibili.com/all?keyword=[user input]
+    顶栏最右侧二级菜单
+    自动获取b站用户头像文件(或者说能否自动获取对应图像url?)
+    多页面切换功能
+    自动获取视频封面url等信息填入json
+问题：暂无
+-->
