--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,6 @@
                     </div>
                 </button>
             </a>
-            <!-- <img itemprop="logo" title="Pornhub" alt="Pornhub Porn Videos" width="150" height="40" src="https://ei.phncdn.com/www-static/images/pornhub_logo_straight.svg?cache=2025050902"> -->
             <div class="ph-logo">
                 <span class="ph-logo-porn">Bili</span><span class="ph-logo-hub">Bili</span>
             </div>
@@ -29,12 +28,49 @@
             <ul>
                 <li class="dropdown">
                     <a href="/src/index.html">首页</a>
-                    <div class="dropdown-content">
-                        <a href="#">热门</a>
-                        <a href="#">推荐</a>
-                        <a href="#">追番</a>
-                        <a href="#">影视</a>
-                    </div>
+                    <div class="dropdown-content multi-column">
+                        <div class="column">
+                            <a href="#">🎬 番剧</a>
+                            <a href="#">🎦 电影</a>
+                            <a href="#">🎨 国创</a>
+                            <a href="#">📺 电视剧</a>
+                            <a href="#">🎭 综艺</a>
+                            <a href="#">📹 纪录片</a>
+                            <a href="#">🎮 动画</a>
+                            <a href="#">🎲 游戏</a>
+                            <a href="#">🎵 鬼畜</a>
+                            <a href="#">🎼 音乐</a>
+                        </div>
+                        <div class="column">
+                            <a href="#">💃 舞蹈</a>
+                            <a href="#">🎥 影视</a>
+                            <a href="#">🎪 娱乐</a>
+                            <a href="#">📚 知识</a>
+                            <a href="#">📱 科技数码</a>
+                            <a href="#">📰 资讯</a>
+                            <a href="#">🍜 美食</a>
+                            <a href="#">🎭 小剧场</a>
+                            <a href="#">🚗 汽车</a>
+                            <a href="#">💄 时尚美妆</a>
+                        </div>
+                        <div class="column">
+                            <a href="#">⚽ 体育运动</a>
+                            <a href="#">🐾 动物</a>
+                            <a href="#">📽️ vlog</a>
+                            <a href="#">🎨 绘画</a>
+                            <a href="#">🤖 人工智能</a>
+                            <a href="#">🏠 家装房产</a>
+                            <a href="#">👟 户外潮流</a>
+                            <a href="#">💪 健身</a>
+                        </div>
+                        <div class="column">
+                            <a href="#">🎨 手工</a>
+                            <a href="#">✈️ 旅游出行</a>
+                            <a href="#">🌾 三农</a>
+                            <a href="#">👶 亲子</a>
+                            <a href="#">❤️ 健康</a>
+                            <a href="#">💝 情感</a>
+                        </div>
                 </li>
                 <li class="dropdown"><a href="">番剧</a></li>
                 <li class="dropdown"><a href="">直播</a></li>
@@ -51,12 +87,28 @@
         <nav class="nav-ul-right">
             <ul>
                 <li class="dropdown"><a href="">大会员</a></li>
-                <li class="dropdown"><a href="">消息</a></li>
+                <li class="dropdown">
+                    <a href="">消息</a>
+                    <div class="dropdown-content">
+                        <a href="#">回复我的</a>
+                        <a href="#">@我的</a>
+                        <a href="#">收到的赞</a>
+                        <a href="#">系统消息</a>
+                        <a href="#">我的消息</a>
+                </li>
                 <li class="dropdown"><a href="">动态</a></li>
                 <li class="dropdown"><a href="">收藏</a></li>
                 <li class="dropdown"><a href="">历史</a></li>
                 <li class="dropdown"><a href="">创作中心</a></li>
-                <li class="dropdown"><a href="">投稿</a></li>
+                <li class="dropdown">
+                    <a href="">投稿</a>
+                    <div class="dropdown-content">
+                        <a href="#">专栏投稿</a>
+                        <a href="#">音频投稿</a>
+                        <a href="#">贴纸投稿</a>
+                        <a href="#">视频投稿</a>
+                        <a href="#">投稿管理</a>
+                </li>
             </ul>
         </nav>
         <div class="avatar-info">
