--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,9 @@
             </ul>
         </nav>
         <div class="avatar-info">
-            <img class="avatar" src="/static/images/avatar.png" alt="用户头像">
+            <a href="" class="avatar-dropdown-content">
+                <img class="avatar" src="/static/images/avatar.png" alt="用户头像">
+            </a>
         </div>
 
     </header>
