--- a/src/index.html
+++ b/src/index.html
@@ -31,47 +31,60 @@
                     <a href="/src/index.html">首页</a>
                     <div class="dropdown-content multi-column">
                         <div class="column">
-                            <a href="#">🎬 番剧</a>
-                            <a href="#">🎦 电影</a>
-                            <a href="#">🎨 国创</a>
-                            <a href="#">📺 电视剧</a>
-                            <a href="#">🎭 综艺</a>
-                            <a href="#">📹 纪录片</a>
-                            <a href="#">🎮 动画</a>
-                            <a href="#">🎲 游戏</a>
-                            <a href="#">🎵 鬼畜</a>
-                            <a href="#">🎼 音乐</a>
+                            <a href="https://www.bilibili.com/anime/" target="_blank">🎬 番剧</a>
+                            <a href="https://www.bilibili.com/movie/" target="_blank">🎦 电影</a>
+                            <a href="https://www.bilibili.com/guochuang/" target="_blank">🎨 国创</a>
+                            <a href="https://www.bilibili.com/tv/" target="_blank">📺 电视剧</a>
+                            <a href="https://www.bilibili.com/variety/" target="_blank">🎭 综艺</a>
+                            <a href="https://www.bilibili.com/documentary/" target="_blank">📹 纪录片</a>
+                            <a href="https://www.bilibili.com/c/douga/" target="_blank">🎮 动画</a>
+                            <a href="https://www.bilibili.com/c/game/" target="_blank">🎲 游戏</a>
+                            <a href="https://www.bilibili.com/c/kichiku/" target="_blank">🎵 鬼畜</a>
+                            <a href="https://www.bilibili.com/c/music/" target="_blank">🎼 音乐</a>
                         </div>
                         <div class="column">
-                            <a href="#">💃 舞蹈</a>
-                            <a href="#">🎥 影视</a>
-                            <a href="#">🎪 娱乐</a>
-                            <a href="#">📚 知识</a>
-                            <a href="#">📱 科技数码</a>
-                            <a href="#">📰 资讯</a>
-                            <a href="#">🍜 美食</a>
-                            <a href="#">🎭 小剧场</a>
-                            <a href="#">🚗 汽车</a>
-                            <a href="#">💄 时尚美妆</a>
+                            <a href="https://www.bilibili.com/c/dance/" target="_blank">💃 舞蹈</a>
+                            <a href="https://www.bilibili.com/c/cinephile/" target="_blank">🎥 影视</a>
+                            <a href="https://www.bilibili.com/c/ent/" target="_blank">🎪 娱乐</a>
+                            <a href="https://www.bilibili.com/c/knowledge/" target="_blank">📚 知识</a>
+                            <a href="https://www.bilibili.com/c/tech/" target="_blank">📱 科技数码</a>
+                            <a href="https://www.bilibili.com/c/information/" target="_blank">📰 资讯</a>
+                            <a href="https://www.bilibili.com/c/food/" target="_blank">🍜 美食</a>
+                            <a href="https://www.bilibili.com/c/shortplay/" target="_blank">🎭 小剧场</a>
+                            <a href="https://www.bilibili.com/c/car/" target="_blank">🚗 汽车</a>
+                            <a href="https://www.bilibili.com/c/fashion/" target="_blank">💄 时尚美妆</a>
                         </div>
                         <div class="column">
-                            <a href="#">⚽ 体育运动</a>
-                            <a href="#">🐾 动物</a>
-                            <a href="#">📽️ vlog</a>
-                            <a href="#">🎨 绘画</a>
-                            <a href="#">🤖 人工智能</a>
-                            <a href="#">🏠 家装房产</a>
-                            <a href="#">👟 户外潮流</a>
-                            <a href="#">💪 健身</a>
+                            <a href="https://www.bilibili.com/c/sports/" target="_blank">⚽ 体育运动</a>
+                            <a href="https://www.bilibili.com/c/animal/" target="_blank">🐾 动物</a>
+                            <a href="https://www.bilibili.com/c/vlog/" target="_blank">📽️ vlog</a>
+                            <a href="https://www.bilibili.com/c/painting/" target="_blank">🎨 绘画</a>
+                            <a href="https://www.bilibili.com/c/ai/" target="_blank">🤖 人工智能</a>
+                            <a href="https://www.bilibili.com/c/home/" target="_blank">🏠 家装房产</a>
+                            <a href="https://www.bilibili.com/c/outdoors/" target="_blank">👟 户外潮流</a>
+                            <a href="https://www.bilibili.com/c/gym/" target="_blank">💪 健身</a>
+                            <a href="https://www.bilibili.com/c/handmake/" target="_blank">🎨 手工</a>
+                            <a href="https://www.bilibili.com/c/travel/" target="_blank">✈️ 旅游出行</a>
                         </div>
                         <div class="column">
-                            <a href="#">🎨 手工</a>
-                            <a href="#">✈️ 旅游出行</a>
-                            <a href="#">🌾 三农</a>
-                            <a href="#">👶 亲子</a>
-                            <a href="#">❤️ 健康</a>
-                            <a href="#">💝 情感</a>
+                            <a href="https://www.bilibili.com/c/rural/" target="_blank">🌾 三农</a>
+                            <a href="https://www.bilibili.com/c/parenting/" target="_blank">👶 亲子</a>
+                            <a href="https://www.bilibili.com/c/health/" target="_blank">❤️ 健康</a>
+                            <a href="https://www.bilibili.com/c/emotion/" target="_blank">💝 情感</a>
+                            <a href="https://www.bilibili.com/c/life_joy/" target="_blank">🎯 生活兴趣</a>
+                            <a href="https://www.bilibili.com/c/life_experience/" target="_blank">📝 生活经验</a>
+                            <a href="https://love.bilibili.com/" target="_blank">🤝 公益</a>
+                            <a href="https://www.bilibili.com/blackboard/era/Vp41b8bsU9Wkog3X.html" target="_blank">🎞️ 超高清</a>
                         </div>
+                        <div class="column">
+                            <a href="https://www.bilibili.com/read/home/" target="_blank">📑 专栏</a>
+                            <a href="https://live.bilibili.com/" target="_blank">🎥 直播</a>
+                            <a href="https://www.bilibili.com/blackboard/activity-list.html?" target="_blank">🎪 活动</a>
+                            <a href="https://www.bilibili.com/cheese/" target="_blank">📚 课堂</a>
+                            <a href="https://www.bilibili.com/blackboard/activity-5zJxM3spoS.html" target="_blank">👥 社区中心</a>
+                            <a href="https://music.bilibili.com/pc/music-center/" target="_blank">🎵 新歌热榜</a>
+                        </div>
+                    </div>
                 </li>
                 <li class="dropdown"><a href="">番剧</a></li>
                 <li class="dropdown"><a href="">直播</a></li>
@@ -113,7 +126,7 @@
             </ul>
         </nav>
         <div class="avatar-info">
-            <a href="" class="avatar-dropdown-content">
+            <a href="https://space.bilibili.com/" target="_blank" class="avatar-dropdown-content">
                 <img class="avatar" src="/static/images/avatar.png" alt="用户头像">
             </a>
         </div>
@@ -195,7 +208,6 @@
     鼠标指针悬停于搜索栏时，显示搜索历史
     当指针悬停于视频封面时，预览视频的功能
     鼠标指针悬停于用户头像时，悬浮菜单显示用户信息
-    实装搜索栏的功能，转到url=https://search.bilibili.com/all?keyword=[user input]
     顶栏最右侧二级菜单
     自动获取b站用户头像文件(或者说能否自动获取对应图像url?)
     多页面切换功能
